--- a/style.css
+++ b/style.css
@@ -439,7 +439,7 @@ footer{
     text-align: center;
 }
 .buttons{
-    padding: 50px 0px 0px 50px;
+    padding: 30px 0px 0px 50px;
 }
 .buttons button{
     padding: 10px 15px 10px 15px;
@@ -927,6 +927,64 @@ footer{
 
 
 @media only screen and (max-width: 660px) {
+    .popup{
+        width: 100%;
+        margin: 0 auto;
+        display: none;
+        position: fixed;
+        z-index: 3;
+    }
+    .popup_box{
+        opacity: 0.9;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border: 0px;
+        width: 300px;
+        height: 200px;
+        margin: 100px auto;
+        background: white;
+        position: relative;
+        padding: 15px 35px;
+        border-radius: 5px;
+        box-shadow: 0 2px 5px #000;
+    }
+    .popup_box h1{
+        margin-top: -10px;
+        font-size: 20px;
+        margin-bottom: 0px;
+    }
+    .popup_box p{
+        font-size: 13px;
+        margin-left: 0px;
+        margin-right: 0px;
+        /* text-align: center; */
+    }
+    
+    .popup_box button{
+        padding: 2px 2px 5px 2px;
+        font-size: 14px;
+        font-weight: 600;
+        width: 100px;
+        border-radius: 4px;
+    }
+    
+    .popup_box input{
+        font-size: 14px;
+        height: 30px;
+        width: 221px;
+        margin-bottom: 20px;
+        border-radius: 4px;
+    }
+
+    .popup_box a{
+        font-size: 10px;
+        color: #d91900;
+        font-weight: bold;
+        text-decoration: none;
+        margin-top: -10px;
+        margin-left: 350px;
+    }
 
     .banner{
         display: none;
@@ -1020,8 +1078,9 @@ footer{
 
     }
     .buttons button{
-        /* display: flex;
-        flex-direction: row; */
+        /* display: flex; */
+        /* flex-direction: row; */
+        /* flex-wrap: wrap; */
         padding: 0px 0px 0px 0px;
         background-color: lightskyblue;
         border-radius: 5%;
@@ -1037,11 +1096,11 @@ footer{
         height: max-content;
         margin-top: 10px;
         color: white;
-        font-size: 16px;
+        font-size: 14px;
         margin-left: 10px;
     }
     #label input{
-        width: 160px;
+        width: 150px;
         height: 20px;
         font-size: 14px;
         margin: 10px;
@@ -1049,6 +1108,7 @@ footer{
         outline: none;
         position: relative;
         z-index: 0;
+        padding-right: 50px;
         /* left: 80px; */
         /* top: -30px; */
         /* margin: 10px; */
@@ -1062,38 +1122,43 @@ footer{
         margin-top: 20px;
         justify-content: center;
     }
+    
     .label_button button{
+        margin-top: 50px;
+        margin-left: -100px;
         padding: 10px 15px 10px 15px;
         background-color: lightskyblue;
         border-radius: 5%;
         border: 0px;
-        font-size: 20px;
+        font-size: 14px;
         font-weight: 600;
         outline: none;
     }
     
     #flight_button {
         width: 100px;
-        margin-left: -8px;
+        margin-left: -26px;
         padding: 0px 0px 0px 0px;
     }
     #hotel_button {
         margin-top: 3px;
         margin-right: 25px;
-        margin-left: -8px;
+        margin-left: -25px;
         width: 100px;
         padding: 0px 0px 0px 0px;
     }
     #things_button {
+        width: 100px;
         margin-right: 25px;
         margin-left: -25px;
         padding: 0px 0px 0px 0px;
     }
     #car_button {
         width: 100px;
+        margin-right: 25px;
         padding: 0px 0px 0px 0px;
     }
-    
+   
     .about{
         
         background-size: 100% 300px;
@@ -1195,6 +1260,9 @@ footer{
         font-weight: 400;
         outline: none;
         color: white;
+    }
+    .buttons_bundle {
+        margin-left: -3px;
     }
     .label_button1{
         text-align: center;
