--- a/style.css
+++ b/style.css
@@ -462,8 +462,8 @@ footer{
     font-size: 20px;
 }
 #label input{
-    height: 30px;
-    font-size: 20px;
+    height: 60px;
+    font-size: 15px;
     margin: 25px;
     border: 0px;
     outline: none;
@@ -495,6 +495,30 @@ footer{
 }
 
 /* service bundle */
+
+#date::before{
+    font-family: "Font Awesome 5 Free";
+    content: "\f073";
+    padding: 5px; 
+}
+
+#pin::before{
+    font-family: "Font Awesome 5 Free";
+    content: "\f276";
+    padding: 5px;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+}
+#people::before{
+    font-family: "Font Awesome 5 Free";
+    content: "\f0c0";
+    padding: 5px;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+}
+
 #bundle{
     height: 600px;
     padding-top: 100px;
