--- a/style.css
+++ b/style.css
@@ -464,8 +464,9 @@ footer{
     font-size: 20px;
 }
 #label input{
+    padding-top: 15px;
     height: 50px;
-    font-size: 20px;
+    font-size: 15px;
     margin: 25px;
     border: 0px;
     outline: none;
@@ -479,8 +480,15 @@ footer{
 .fli i{
     position: absolute;
     left: 40px;
-    top: 50%;
-    transform: translateY(-50%)
+    top: 55px;
+    
+}
+span{
+    position: absolute;
+    font-size: 12px;
+    left: 40px;
+    top: 32px;
+    color: black
 }
 
 
@@ -903,8 +911,9 @@ footer{
         margin-left: 10px;
     }
     #label input{
+        padding-top: 15px;
         width: 160px;
-        height: 20px;
+        height: 25px;
         font-size: 14px;
         margin: 25px;
         border: 0px;
@@ -916,6 +925,27 @@ footer{
         /* margin: 10px; */
     
     }
+    
+    .fli{
+        position: relative;
+        display: inline-block;
+    }
+    .fli i{
+        position: absolute;
+        left: 40px;
+        top: 45px;
+        
+    }
+    span{
+        position: absolute;
+        font-size: 10px;
+        left: 40px;
+        top: 28px;
+        color: black
+    }
+
+
+
     #contact {
         position: relative;
         left: 40%;
@@ -946,9 +976,14 @@ footer{
     }
     
     .label_button{
-        margin-top: 0px;
-        margin-left: 110px;
+        margin-top: 45px;
+        margin-left:20px;
     }
+    .label_button1{
+        margin-top: 45px;
+        margin-left:20px;
+    }
+
     .label_button button{
         padding: 10px 15px 10px 15px;
         background-color: lightskyblue;
@@ -1146,6 +1181,7 @@ footer{
         margin-left: 10px;
     }
     #label input{
+        padding-top: 13px;
         width: 150px;
         height: 20px;
         font-size: 14px;
@@ -1167,9 +1203,16 @@ footer{
     }
     .fli i{
         position: absolute;
-        left: 30px;
-        top: 50%;
-        transform: translateY(-50%)
+        left: 25px;
+        top: 26px;
+        
+    }
+    span{
+        position: absolute;
+        font-size: 10px;
+        left: 45px;
+        top: 10px;
+        color: black
     }
 
     .label_button button:hover{
@@ -1325,6 +1368,9 @@ footer{
     .label_button1{
         text-align: center;
         margin: 60px 0px 20px 0px;
+    }
+    .label_button{
+        margin-left:100px;
     }
     
     .label_button1 button{
